fix perk alignment issue when checkbox changes for checked to unchecked and vise verca

--- a/CustomFallout2.css
+++ b/CustomFallout2.css
@@ -562,12 +562,7 @@ input.sheet-condition_name{
     max-width: 100%;
     min-height: 0;
 }
-.sheet-perk_descr  {
-    grid-column: 1/5;
-    min-width: 0;
-    height: 90%;
-    width: 95%;
-}
+
 .repcontainer[data-groupname="repeating_perks"]{
     min-width: 0;
     min-height: 0;
@@ -580,16 +575,32 @@ input.sheet-condition_name{
 .sheet-perks > .repcontainer[data-groupname="repeating_perks"] >.repitem{
     min-width: 0;
     display: grid;
-    grid-template-columns: 2.5em 1fr 2.5em 1em;;
+    grid-template-columns: 1fr 2.5em 1.2em;;
     grid-template-rows: 1fr min-content;
     grid-gap: 0.3em;
 
 }
+input.sheet-perk_name{
+    /*color: red;*/
+    /*width: 100%;*/
+    /*min-width: 100%;*/
+}
+.sheet-perk_roll{
+    min-width: 0;
+}
+
 .sheet-perk_descr  {
-    grid-column: 1/5;
+    grid-column: 1/4;
     min-width: 0;
     height: 90%;
-    width: 95%;
+    width: 92%;
+}
+input.sheet-toggle_perk_description{
+    margin: 0;
+    padding: 0;
+
+    /*width: 1em;*/
+    /*max-width: 1em;*/
 }
 input.sheet-toggle_perk_description:not(:checked) ~ textarea{
  display: none;
